# SetsAndIntervals

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-14.yaml  gcc-12.yaml  generic.yaml
src/math/: constant.hpp  interval.hpp
src/math/set/: empty.hpp  flattening_view.hpp  number.hpp  operators.hpp  set.hpp
src/public/math/: infinity.hpp  integral_iterator.hpp  interval.hpp  numberspaces.hpp  operations.hpp  set.hpp  type_traits.hpp
src/public/math/numberspaces/: integer.hpp  natural.hpp  real.hpp  whole.hpp
src/public/math/set/: cardinality.hpp  countable.hpp  element_of.hpp  empty.hpp  flattening_view.hpp  operators.hpp  set.hpp  subset_of.hpp
unit_test/: CMakeLists.txt
unit_test/math/: integral_iterator.cpp  interval.cpp  numberspaces.cpp  operations.cpp
unit_test/math/set/: flattening_view.cpp  number.cpp  operators.cpp  set.cpp
